--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,30 @@
 # RStudio files
 .Rproj.user/
 
+
+
+
+
+
+
+
+# Prevent users to commit their own .RProj
+*.Rproj
+
+# Temporary files
+*~
+~$*.doc*
+~$*.xls*
+*.xlk
+~$*.ppt*
+
+# Prevent mac users to commit .DS_Store files
+*.DS_Store
+
+# Prevent users to commit the README files created by RStudio
+*README.html
+*README_cache/
+#*README_files/
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
